--- a/example/index-requirejs.html
+++ b/example/index-requirejs.html
@@ -8,8 +8,8 @@
 	</head>
 	<body>
 		<div class="txt-count-container">
-		<div class="counter"><em>30</em></div>
 		<textarea name="txt" id="txt" cols="30" rows="10" class="txt">万色城是一个创业平台，所有万色城的网商通过加盟，注册一个属于自己的网上商城。推广自己的商城，销售商城的商品创造收益。每个网商拥有一个属于自己的独立域名。万色城是国内唯一全部实行“实名制”的网上商城，每一个网商，以自己真实的姓名、照片和信誉，作为诚信经营的保障。</textarea>
+		<div class="counter2">你还可以输入<em>30</em>个字</div>
 	</div>
 		<p><input type="button" value="点击提交" class="click"></p>
 		<script type="text/javascript" src="../dest/zepto.js"></script>
@@ -29,7 +29,7 @@
 					max:200,
 					isOverflowCut: false,
 					overClass:"over-number",
-					num:$(" .counter em"),
+					num:$(" .counter2 em"),
 					withButton:".click",
 					minHeight:100,
 					overflowCallback: function() {
