Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -143,6 +143,39 @@ wc .init({
 
 <pre><code>文本框的最小高度，因为这里做自适应高度的控制。
 </code></pre>
+
+<h2>
+<a id="withbutton---element" class="anchor" href="#withbutton---element" aria-hidden="true"><span class="octicon octicon-link"></span></a>withButton:   element</h2>
+
+<pre><code>关联按钮
+</code></pre>
+
+<h2>
+<a id="isbyte---boollen" class="anchor" href="#isbyte---boollen" aria-hidden="true"><span class="octicon octicon-link"></span></a>isByte:   boollen</h2>
+
+<pre><code>是否按字节数来计算，true时：一个汉字作2个单位长度，false时汉字英文不作区分
+</code></pre>
+
+<h1>
+<a id="方法回调" class="anchor" href="#%E6%96%B9%E6%B3%95%E5%9B%9E%E8%B0%83" aria-hidden="true"><span class="octicon octicon-link"></span></a>方法回调:</h1>
+
+<h2>
+<a id="overflowcallbackfunction" class="anchor" href="#overflowcallbackfunction" aria-hidden="true"><span class="octicon octicon-link"></span></a>overflowCallback:function(){}</h2>
+
+<pre><code>超出时的回调，this指向当前对象
+</code></pre>
+
+<h2>
+<a id="changecallbackfunctionntextboxmax" class="anchor" href="#changecallbackfunctionntextboxmax" aria-hidden="true"><span class="octicon octicon-link"></span></a>changeCallback:function(n,textbox,max)</h2>
+
+<pre><code>长度改变时的回调,n为长度,textbox是文本框结点对象,max为最大长度
+</code></pre>
+
+<h2>
+<a id="passclallbackfunctionntextboxmax" class="anchor" href="#passclallbackfunctionntextboxmax" aria-hidden="true"><span class="octicon octicon-link"></span></a>passClallback:function(n,textbox,max)</h2>
+
+<pre><code>长度通过时的回调,n为长度,textbox是文本框结点对象,max为最大长度
+</code></pre>
         </section>
 
         <aside id="sidebar">
