--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ wc .init({
 <h2>
 <a id="minheight----number" class="anchor" href="#minheight----number" aria-hidden="true"><span class="octicon octicon-link"></span></a>minHeight:    number</h2>
 
-<pre><code>文本框的最小高度，因为这里做自适应高度的控制。
+<pre><code>文本框的最小高度，因为这里做自适应高度的控制。如没有此参数时，不自适应高度。
 </code></pre>
 
 <h2>
@@ -160,9 +160,9 @@ wc .init({
 <a id="方法回调" class="anchor" href="#%E6%96%B9%E6%B3%95%E5%9B%9E%E8%B0%83" aria-hidden="true"><span class="octicon octicon-link"></span></a>方法回调:</h1>
 
 <h2>
-<a id="overflowcallbackfunction" class="anchor" href="#overflowcallbackfunction" aria-hidden="true"><span class="octicon octicon-link"></span></a>overflowCallback:function(){}</h2>
+<a id="overflowcallbackfunctionntextboxmax" class="anchor" href="#overflowcallbackfunctionntextboxmax" aria-hidden="true"><span class="octicon octicon-link"></span></a>overflowCallback:function(n,textbox,max)</h2>
 
-<pre><code>超出时的回调，this指向当前对象
+<pre><code>超出时的回调，this指向当前对象,n为长度,textbox是文本框结点对象,max为最大长度
 </code></pre>
 
 <h2>
